--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LaTableDesGourmands">
-        <activity android:name=".cuisinier.acceuilCuisinier"></activity>
+        <activity android:name=".cuisinier.creerMaTable.creerMaTableStep4"></activity>
+        <activity android:name=".cuisinier.creerMaTable.creerMaTableStep2bis" />
+        <activity android:name=".cuisinier.creerMaTable.importMenu" />
+        <activity android:name=".cuisinier.creerMaTable.creerMaTableStep3" />
+        <activity android:name=".cuisinier.creerMaTable.creerMaTableStep2" />
+        <activity android:name=".cuisinier.gérerMesTables.gererMesTables" />
+        <activity android:name=".cuisinier.gererMesMenus.gererMesMenus" />
+        <activity android:name=".cuisinier.créerMonMenu.creerMonMenu" />
+        <activity android:name=".cuisinier.creerMaTable.creerMaTable" />
+        <activity android:name=".cuisinier.acceuilCuisinier" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
