--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LaTableDesGourmands">
-        <activity android:name=".cuisinier.creerMaTable.creerMaTableStep4"/>
+        <activity android:name=".cuisinier.créerMonMenu.creerMonMenuStep1"></activity>
+        <activity android:name=".cuisinier.créerMonMenu.creerMonMenuStep3" />
+        <activity android:name=".cuisinier.créerMonMenu.creerMonMenuStep2" />
+        <activity android:name=".cuisinier.creerMaTable.creerMaTableStep4" />
         <activity android:name=".cuisinier.creerMaTable.creerMaTableStep2bis" />
         <activity android:name=".cuisinier.creerMaTable.importMenu" />
         <activity android:name=".cuisinier.creerMaTable.creerMaTableStep3" />
@@ -19,12 +22,12 @@
         <activity android:name=".cuisinier.créerMonMenu.creerMonMenu" />
         <activity android:name=".cuisinier.creerMaTable.creerMaTable" />
         <activity android:name=".cuisinier.acceuilCuisinier" />
-        <activity android:name=".invite.rechercherUneTable.RechercherTableStep3"/>
-        <activity android:name=".invite.rechercherUneTable.RechercherTableStep2"/>
-        <activity android:name=".invite.rechercherUneTable.RechercherTableStep1"/>
-        <activity android:name=".invite.gererMesTables.GererMesTablesInvite"/>
-        <activity android:name=".invite.AccueilInvite"/>
-        <activity android:name=".demarrageapplication.ChoixCuisinierInvite"/>
+        <activity android:name=".invite.rechercherUneTable.RechercherTableStep3" />
+        <activity android:name=".invite.rechercherUneTable.RechercherTableStep2" />
+        <activity android:name=".invite.rechercherUneTable.RechercherTableStep1" />
+        <activity android:name=".invite.gererMesTables.GererMesTablesInvite" />
+        <activity android:name=".invite.AccueilInvite" />
+        <activity android:name=".demarrageapplication.ChoixCuisinierInvite" />
         <activity android:name=".demarrageapplication.AcceuilApplication">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
